updated footer and navigation media queries

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
+                  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                   <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
                   <li><a href="contact.html">contact</a></li>
@@ -47,14 +48,14 @@
                             </div></a>
                   </div></a>
                   <div class="text">
-                        <a href="rfs.html"><h3>Starting from the sole</h3></a>
+                        <a href="rfs.html"><h3>Starting from the sole up</h3></a>
                         <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
                           help taking his company to the next level: brand identity & e-commerce site.
                   </div>
               </div>
               <div class="second">
                   <div class="text">
-                        <a href="coop.html"><h3>A set of new wings</h3></a>
+                        <a href="coop.html"><h3>A new set of wings</h3></a>
                         <p>Finally, a fun platform that makes it easy to share, store, and collaborate
                           with friends & colleagues. This platform has a user friendly dashboard with a chat
                           feature. It also boasts integration with social networks.
