--- a/rfs.html
+++ b/rfs.html
@@ -29,7 +29,7 @@
               </ul>
           </nav>
           <section class="hero">
-              <h1>making men's shoes cool</h1>
+              <h1>classics reimagined</h1>
               <img src="images/rfs.png">
               <div class="hero-text">
                   <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
@@ -46,7 +46,7 @@
       </header>
       <main>
           <section class="intro">
-              <h2>starting from scratch</h2>
+              <h2>starting from the sole up</h2>
               <p>We needed a better understanding of the environment - who else was doing this?
                 How will we convince strangers to buy these shoes? Where should we market the new
                 site? And most importantly, how do we set ourselves up to compete?</p>
