Resized and renamed images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   </div>
                   <a href="coop.html"><div class="img">
                         <img src="images/coop.png" alt:"COOP">
-                            <a href="RFS.html"><div class="overlay">
+                            <a href="rfs.html"><div class="overlay">
                                 <h3 class="text">COOP</h3>
                                 <p class="case-study">see case study</p>
                             </div></a>
