--- a/rfs.html
+++ b/rfs.html
@@ -95,8 +95,8 @@
           <section class="users">
               <h3>Who Are They?</h3>
               <div class="user-boxes">
-                  <img src="images/VE.png" class="first">
-                  <img src="images/JM.png" class="second">
+                  <img src="images/ve.png" class="first">
+                  <img src="images/jm.png" class="second">
               </div>
           </section>
           <section class="info-arch">
@@ -106,13 +106,13 @@
                 whether additional pages were needed. We learned that the potential
                 customer wanted to learn more about the product, with multiple survey
                 respondents suggesting a section devoted to hand-painting techniques.</p>
-              <img src="images/refated-site-map.png" class="full">
+              <img src="images/rfs-site-map.png" class="full">
               <h3>Flows</h3>
               <p>Based on our user personas, we decided to target the Vincent’s and
                 Marcus' through Instagram and Facebook, while the Jean's would learn
                 through word-of-mouth. Accordingly, I designed the below user flow to
                 reflect the journey the shopper will take once they click on that link.</p>
-              <img src="images/refated-user-flows.png" class="full">
+              <img src="images/rfs-user-flows.png" class="full">
           </section>
           <section class="sketch">
               <h2>translating to web</h2>
@@ -179,7 +179,7 @@
               <img src="images/homepagev1.png" class="full">
               <h3>About, Contact, FAQ</h3>
               <ul class="prototype-images">
-                  <li><img src="images/about refated.png" class="third"></li>
+                  <li><img src="images/about-refated.png" class="third"></li>
                   <li><img src="images/contact.png" class="third"></li>
                   <li><img src="images/faq.png" class="third"></li>
               </ul>
