Updated media queries for RFS case study and cleaned up the code

--- a/rfs.html
+++ b/rfs.html
@@ -145,15 +145,15 @@
               <div class="other-branding">
                   <div class="type">
                       <h3>Typography</h3>
-                      <img src="images/fonts.png" class="left-full">
+                      <img src="images/fonts.png">
                   </div>
                   <div class="button">
                       <h3>Buttons</h3>
-                      <img src="images/buttons.png" class="top-bottom">
+                      <img src="images/buttons.png">
                   </div>
                   <div class="mock">
                       <h3>Mockup</h3>
-                      <img src="images/mockup.png" class="top-bottom">
+                      <img src="images/mockup.png">
                   </div>
               </div>
           </section>
@@ -211,7 +211,7 @@
           </section>
           <section class="navigation">
               <div class="arrows">
-                  <a href="landing.html"><img src="images/previous.png" class="left"></a>
+                  <a href="index.html"><img src="images/previous.png" class="left"></a>
                   <a href="coop.html"><img src="images/next.png" class="right"></a>
               </div>
               <div class="case-studies">
