updated case study responsiveness

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
               </ul>
           </nav>
           <section class="hero">
-              <h1>nomadic designer</h1>
+              <h1>american designer in milan</h1>
               <p>My name is Gulbahar Okuyan-Waugh. I’m available
-                for consulting in UX design, user research, and marketing. I’m currently
-                living in DC, but will be living in Milan starting in August.</p>
+                for remote consulting in UX design, user research, and marketing.</p>
               <p class="learn-more">Jump to my <a href="index.html">portfolio</a> or learn more
                   <a href="about.html">about me</a>.</p>
           </section>
@@ -41,7 +40,7 @@
           <section class="projects">
               <div class="first">
                   <a href="rfs.html"><div class="img">
-                        <img src="images/rfs.png" alt:"RFS">
+                        <img src="images/rfs-laptop.png">
                             <a href="RFS.html"><div class="overlay">
                                 <h3 class="text">ReFated Shoes</h3>
                                 <p class="case-study">see case study</p>
@@ -56,12 +55,11 @@
               <div class="second">
                   <div class="text">
                         <a href="coop.html"><h3>A new set of wings</h3></a>
-                        <p>Finally, a fun platform that makes it easy to share, store, and collaborate
-                          with friends & colleagues. This platform has a user friendly dashboard with a chat
-                          feature. It also boasts integration with social networks.
+                        <p>A fun platform that makes it easy to share, store, and collaborate
+                          with friends & colleagues that needed help rebranding for a new audience.
                   </div>
                   <a href="coop.html"><div class="img">
-                        <img src="images/coop.png" alt:"COOP">
+                        <img src="images/coop-laptop.png">
                             <a href="rfs.html"><div class="overlay">
                                 <h3 class="text">COOP</h3>
                                 <p class="case-study">see case study</p>
