--- a/rfs.html
+++ b/rfs.html
@@ -30,7 +30,7 @@
           </nav>
           <section class="hero">
               <h1>classics reimagined</h1>
-              <img src="images/rfs.png">
+              <img src="images/rfs-laptop.png">
               <div class="hero-text">
                   <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
                     impeccable style. Bored of the basic blacks and browns, he hand-painted his
@@ -50,53 +50,58 @@
               <p>We needed a better understanding of the environment - who else was doing this?
                 How will we convince strangers to buy these shoes? Where should we market the new
                 site? And most importantly, how do we set ourselves up to compete?</p>
-          </section>
-          <section class="competition">
-              <h3>Who's Out There?</h3>
-              <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
-              <ul class="inspo">
-                  <li><img src="images/inspo1.png" class="third"></li>
-                  <li><img src="images/inspo2.png" class="third"></li>
-                  <li><img src="images/inspo3.png" class="third"></li>
-                  <li><img src="images/comp1.png" class="third"></li>
-                  <li><img src="images/comp2.png" class="third"></li>
-                  <li><img src="images/comp3.png" class="third"></li>
-              </ul>
-              <div class="box"><p></p></div>
-              <p>Design pattern: the direct competitors use stone/slate textures and colors,
-                while the sources of inspiration rely on a black and white color scheme with
-                brightly colored calls-to-action.</p>
-          </section>
-          <section class="user-research">
-              <h3>User Research</h3>
-              <p>Considering the distinct nature of this business: of painting second-hand,
-                vintage, or out of season shoes, we needed a better understanding of how to
-                market to the target customer. We also needed to identify the target customer.</p>
-              <p class="survey-results">1st Survey: 33 respondents
-                  <ul class="survey">
-                      <li><span>87.9%</span> mostly consider quality & style to purchase shoes</li>
-                      <li><span>75.8%</span> would purchase shoes online</li>
-                      <li><span>48%</span> would buy or consider buying refurbished shoes</li>
-                  </ul></p>
-              <p>The seven out of eight (87.5%) respondents who would pay between $100-$300 for a
-                pair of shoes, who would also purchase shoes online and 50% would consider buying
-                refurbished shoes.
-              <p class="survey-results">2nd Survey: 133 respondents
-                  <ul class="survey">
-                      <li><span>54.3%</span> would consider buying hand-dyed shoes</li>
-                      <li><span>25.4%</span> would buy hand-dyed shoes</li>
-                      <li><span>"used"</span> most resembled "refurbished"</li>
-                  </ul></p>
-              <p class="survey-results">We had to replace the word "refurbished".
-              <p>I conducted another survey to test whether it was the term “refurbished” or the concept
-                behind RF that turned customers away. The word refurbished had to change, so we decided
-                on hand-painted. This term tested well during the website prototype.</p>
-          </section>
-          <section class="users">
-              <h3>Who Are They?</h3>
-              <div class="user-boxes">
-                  <img src="images/ve.png" class="first">
-                  <img src="images/jm.png" class="second">
+              <div class="competition">
+                  <h3>Who's Out There?</h3>
+                  <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
+                  <ul class="inspo">
+                      <li><img src="images/inspo1.png" class="sixth"></li>
+                      <li><img src="images/inspo2.png" class="sixth"></li>
+                      <li><img src="images/inspo3.png" class="sixth"></li>
+                      <li><img src="images/comp1.png" class="sixth"></li>
+                      <li><img src="images/comp2.png" class="sixth"></li>
+                      <li><img src="images/comp3.png" class="sixth"></li>
+                  </ul>
+                  <div class="box"><p> </p></div>
+                  <p>Design pattern: the direct competitors use stone/slate textures and colors,
+                    while the sources of inspiration rely on a black and white color scheme with
+                    brightly colored calls-to-action.</p>
+              </div>
+              <div class="user-research">
+                  <h3>User Research</h3>
+                  <p>Considering the distinct nature of this business: of painting second-hand,
+                    vintage, or out of season shoes, we needed a better understanding of how to
+                    market to the target customer. We also needed to identify the target customer.</p>
+                  <div class="survey-results">
+                      <p>1st Survey: 33 respondents</p>
+                      <ul class="survey">
+                          <li><span>87.9%</span> mostly consider quality & style to purchase shoes</li>
+                          <li><span>75.8%</span> would purchase shoes online</li>
+                          <li><span>48%</span> would buy or consider buying refurbished shoes</li>
+                      </ul>
+                      <p>The seven out of eight (87.5%) respondents who would pay between $100-$300 for a
+                        pair of shoes, who would also purchase shoes online and 50% would consider buying
+                        refurbished shoes.</p>
+                  </div>
+
+                  <div class="survey-results">
+                      <p>2nd Survey: 133 respondents</p>
+                      <ul class="survey">
+                          <li><span>54.3%</span> would consider buying hand-dyed shoes</li>
+                          <li><span>25.4%</span> would buy hand-dyed shoes</li>
+                          <li><span>"used"</span> most resembled "refurbished"</li>
+                      </ul>
+                      <p class="survey-results">We had to replace the word "refurbished".
+                      <p>I conducted another survey to test whether it was the term “refurbished” or the concept
+                        behind RF that turned customers away. The word refurbished had to change, so we decided
+                        on hand-painted. This term tested well during the website prototype.</p>
+                  </div>
+              </div>
+              <div class="users">
+                  <h3>Who Are They?</h3>
+                  <div class="user-boxes">
+                      <img src="images/vincent.png" class="first">
+                      <img src="images/jean.png" class="second">
+                  </div>
               </div>
           </section>
           <section class="info-arch">
@@ -176,32 +181,32 @@
                         dyeing process and on the specific shoes that are being sold.</p>
                   </div>
               <h3>Landing Page</h3>
-              <img src="images/homepagev1.png" class="full">
+              <img src="images/homepage.png" class="full">
               <h3>About, Contact, FAQ</h3>
               <ul class="prototype-images">
                   <li><img src="images/about-refated.png" class="third"></li>
-                  <li><img src="images/contact.png" class="third"></li>
-                  <li><img src="images/faq.png" class="third"></li>
+                  <li><img src="images/contact-page.png" class="third"></li>
+                  <li><img src="images/FAQ.png" class="third"></li>
               </ul>
 
               <h3>Purchasing Flow</h3>
               <ul class="prototype-images">
-                  <li><img src="images/shoe-detail.png" class="third"></li>
-                  <li><img src="images/shopping-cart.png" class="third"></li>
-                  <li><img src="images/checkout-payment.png" class="third"></li>
-                  <li><img src="images/payment-confirmation.png" class="third"></li>
+                  <li><img src="images/rfs-detail.png" class="third"></li>
+                  <li><img src="images/rfs-cart.png" class="third"></li>
+                  <li><img src="images/payment.png" class="third"></li>
+                  <li><img src="images/rfs-confirmation.png" class="third"></li>
               </ul>
               <div class="membership">
                   <h3>Membership</h3>
                   <p>Darcy’s goal is to include membership services once he builds a
                     larger following. So, we planned for the future and designed an
                     account page.</p>
-                  <img src="images/membership.png" class="full">
+                  <img src="images/rfs-account.png" class="full">
               </div>
           </section>
 
           <section class="conclusion">
-              <h3>what i leared from this experience</h3>
+              <h2>what i leared from this experience</h2>
               <p>In retail, photography is just as important as the site design.
                 To dispel concerns of condition and quality, the users requested
                 more photos of the finished product as well as the painting process.
@@ -215,8 +220,8 @@
                   <a href="coop.html"><img src="images/next.png" class="right"></a>
               </div>
               <div class="case-studies">
-                  <a href="rfs.html"><img src="images/rfs.png" class="first"></a>
-                  <a href="coop.html"><img src="images/coop.png" class="second"></a>
+                  <a href="rfs.html"><img src="images/rfs-laptop.png" class="first"></a>
+                  <a href="coop.html"><img src="images/coop-laptop.png" class="second"></a>
               </div>
           </section>
 
