Coop case study completed

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
 
       <section class="moodboard">
             <h2>inspiration for my portfolio</h2>
-            <img src="images/moodboard.png">
+            <img src="images/Moodboard.png">
       </section>
 
       <footer class="footer-info">
