--- a/rfs.html
+++ b/rfs.html
@@ -67,7 +67,7 @@
                     brightly colored calls-to-action.</p>
               </div>
               <div class="user-research">
-                  <h3>User Research</h3>
+                  <h3>But first, what do the people want?</h3>
                   <p>Considering the distinct nature of this business: of painting second-hand,
                     vintage, or out of season shoes, we needed a better understanding of how to
                     market to the target customer. We also needed to identify the target customer.</p>
