--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,9 @@
                 or <a href="https://www.linkedin.com/in/gulokuyan/">LinkedIn</a>.</p>
               <ul class="contact-icons">
                   <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
-                      <i class="fab fa-linkedin-in"></i> </a>
-                  </li>
+                      <i class="fab fa-linkedin-in"></i></a></li>
                   <li><a href="mailto:gokuyan@gmail.com" alt="email me">
-                      <i class="fas fa-envelope"></i></a>
-                  </li>
+                      <i class="fas fa-envelope"></i></a></li>
               </ul>
           </section>
       </header>
