--- a/rfs.html
+++ b/rfs.html
@@ -3,6 +3,15 @@
   <head>
      <title>UX Designer: Gulbahar Okuyan-Waugh</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120968085-1');
+      </script>
      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -53,15 +62,18 @@
               <div class="competition">
                   <h3>Who's Out There?</h3>
                   <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
-                  <ul class="inspo">
+                  <div class="inspo">
+                      <p>
                       <li><img src="images/inspo1.png" class="sixth"></li>
                       <li><img src="images/inspo2.png" class="sixth"></li>
                       <li><img src="images/inspo3.png" class="sixth"></li>
                       <li><img src="images/comp1.png" class="sixth"></li>
                       <li><img src="images/comp2.png" class="sixth"></li>
                       <li><img src="images/comp3.png" class="sixth"></li>
-                  </ul>
-                  <div class="box"><p> </p></div>
+                    </p>
+                  </div>
+                  <!--<div class="box"><p> </p></div>
+                  <p> -->
                   <p>Design pattern: the direct competitors use stone/slate textures and colors,
                     while the sources of inspiration rely on a black and white color scheme with
                     brightly colored calls-to-action.</p>
