updated landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-      <header>
+      <header id="container">
           <nav>
               <a href="index.html" class="logo">
                   <img src="images/spring.png" alt="gulbahar okuyan logo">
@@ -38,42 +38,47 @@
               </ul>
           </nav>
           <section class="hero">
-              <h1>american designer in milan</h1>
-              <p>My name is Gulbahar Okuyan-Waugh. I’m available
-                for remote consulting in UX design, user research, and marketing.</p>
-              <p class="learn-more">Jump to my <a href="index.html">portfolio</a> or learn more
-                  <a href="about.html">about me</a>.</p>
+              <div class="home-hero">
+                  <h1>gulbahar okuyan-waugh is a <span>ux designer</span></h1>
+                  <p>Based in Milan, she's available for consulting in UX design, user research,
+                    & marketing. View <a href="index.html">portfolio</a> below or
+                    <a href="about.html">learn more</a>.</p>
+              </div>
           </section>
       </header>
       <main>
           <section class="projects">
-              <div class="first">
-                  <a href="rfs.html"><div class="img">
-                        <img src="images/rfs-laptop.png">
-                            <a href="RFS.html"><div class="overlay">
-                                <h3 class="text">ReFated Shoes</h3>
-                                <p class="case-study">see case study</p>
-                            </div></a>
-                  </div></a>
-                  <div class="text">
-                        <a href="rfs.html"><h3>Starting from the sole up</h3></a>
-                        <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
-                          help taking his company to the next level: brand identity & e-commerce site.
+              <div class="project-block-rfs">
+                  <div class="content">
+                      <p>
+                      <div class="first">
+                          <a href="rfs.html" class="rfs-image">
+                                <img src="images/rfs-laptop.png">
+                          </a>
+                      </div>
+                      <div class="second">
+                            <a href="rfs.html"><h3>Starting from the sole up</h3></a>
+                            <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
+                              help taking his company to the next level: brand identity & e-commerce site.
+                      </div>
+                      <p>
                   </div>
               </div>
-              <div class="second">
-                  <div class="text">
-                        <a href="coop.html"><h3>A new set of wings</h3></a>
-                        <p>A fun platform that makes it easy to share, store, and collaborate
-                          with friends & colleagues that needed help rebranding for a new audience.
+              <div class="project-block-coop">
+                  <div class="content">
+                      <p>
+                      <div class="first">
+                          <a href="coop.html" class="coop-image">
+                                <img src="images/coop-laptop.png">
+                          </a>
+                      </div>
+                      <div class="second">
+                            <a href="coop.html"><h3>A new set of wings</h3></a>
+                            <p>A fun platform that makes it easy to share, store, and collaborate
+                              with friends & colleagues that needed help rebranding for a new audience.
+                      </div>
+                      <p>
                   </div>
-                  <a href="coop.html"><div class="img">
-                        <img src="images/coop-laptop.png">
-                            <a href="rfs.html"><div class="overlay">
-                                <h3 class="text">COOP</h3>
-                                <p class="case-study">see case study</p>
-                            </div></a>
-                  </div></a>
               </div>
           </section>
 
