--- a/rfs.html
+++ b/rfs.html
@@ -38,19 +38,21 @@
               </ul>
           </nav>
           <section class="hero">
-              <h1>classics reimagined</h1>
-              <img src="images/rfs-laptop.png">
-              <div class="hero-text">
-                  <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
-                    impeccable style. Bored of the basic blacks and browns, he hand-painted his
-                    own shoes in vibrant hues, patina patterns, and however else inspiration took
-                    hold of his paint brush. To his surprise, colleagues and passersby were offering
-                    to buy the shoes off his feet. So, he decided to take his hobby online.
-                  <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
-                    host his own site and define his brand. Enter: me. My role was to help him with
-                    strategy, marketing, and design.</p>
-                </div>
-                <a href="#"><button class="case-study-button">view prototype</button></a>
+              <div class="case-hero">
+                  <h1>classics reimagined</h1>
+                  <img src="images/rfs-laptop.png">
+                  <div class="hero-text">
+                      <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
+                        impeccable style. Bored of the basic blacks and browns, he hand-painted his
+                        own shoes in vibrant hues, patina patterns, and however else inspiration took
+                        hold of his paint brush. To his surprise, colleagues and passersby were offering
+                        to buy the shoes off his feet. So, he decided to take his hobby online.
+                      <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
+                        host his own site and define his brand. Enter: me. My role was to help him with
+                        strategy, marketing, and design.</p>
+                    </div>
+                    <a href="#"><button class="case-study-button">view prototype</button></a>
+              </div>
           </section>
       </header>
       <main>
