--- a/rfs.html
+++ b/rfs.html
@@ -66,13 +66,13 @@
                   <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
                   <div class="inspo">
                       <p>
-                      <li><img src="images/inspo1.png" class="sixth"></li>
-                      <li><img src="images/inspo2.png" class="sixth"></li>
-                      <li><img src="images/inspo3.png" class="sixth"></li>
-                      <li><img src="images/comp1.png" class="sixth"></li>
-                      <li><img src="images/comp2.png" class="sixth"></li>
-                      <li><img src="images/comp3.png" class="sixth"></li>
-                    </p>
+                      <li><img src="images/inspo1.png" class="third"></li>
+                      <li><img src="images/inspo2.png" class="third"></li>
+                      <!--<li><img src="images/inspo3.png" class="sixth"></li>
+                      <li><img src="images/comp1.png" class="sixth"></li>-->
+                      <li><img src="images/comp2.png" class="third"></li>
+                      <!--<li><img src="images/comp3.png" class="sixth"></li>-->
+                    <p>
                   </div>
                   <!--<div class="box"><p> </p></div>
                   <p> -->
