--- a/rfs.html
+++ b/rfs.html
@@ -57,25 +57,26 @@
       </header>
       <main>
           <section class="intro">
-              <h2>starting from the sole up</h2>
-              <p>We needed a better understanding of the environment - who else was doing this?
-                How will we convince strangers to buy these shoes? Where should we market the new
-                site? And most importantly, how do we set ourselves up to compete?</p>
+              <div class="intro-text">
+                  <h2>starting from the sole up</h2>
+                  <p>We needed a better understanding of the environment - who else was doing this?
+                    How will we convince strangers to buy these shoes? Where should we market the new
+                    site? And most importantly, how do we set ourselves up to compete?</p>
+              </div>
               <div class="competition">
                   <h3>Who's Out There?</h3>
                   <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
+                  <p>
                   <div class="inspo">
-                      <p>
                       <li><img src="images/inspo1.png" class="third"></li>
                       <li><img src="images/inspo2.png" class="third"></li>
                       <!--<li><img src="images/inspo3.png" class="sixth"></li>
                       <li><img src="images/comp1.png" class="sixth"></li>-->
                       <li><img src="images/comp2.png" class="third"></li>
                       <!--<li><img src="images/comp3.png" class="sixth"></li>-->
-                    <p>
                   </div>
-                  <!--<div class="box"><p> </p></div>
-                  <p> -->
+                  <div class="box"><p> </p></div>
+                  <p>
                   <p>Design pattern: the direct competitors use stone/slate textures and colors,
                     while the sources of inspiration rely on a black and white color scheme with
                     brightly colored calls-to-action.</p>
@@ -84,9 +85,9 @@
                   <h3>But first, what do the people want?</h3>
                   <p>Considering the distinct nature of this business: of painting second-hand,
                     vintage, or out of season shoes, we needed a better understanding of how to
-                    market to the target customer. We also needed to identify the target customer.</p>
+                    market to the target customer. We also needed to identify the target customer.
+                    The first survey, with 33 respondents, reconfirmed what we knew:</p>
                   <div class="survey-results">
-                      <p>1st Survey: 33 respondents</p>
                       <ul class="survey">
                           <li><span>87.9%</span> mostly consider quality & style to purchase shoes</li>
                           <li><span>75.8%</span> would purchase shoes online</li>
@@ -98,17 +99,34 @@
                   </div>
 
                   <div class="survey-results">
-                      <p>2nd Survey: 133 respondents</p>
+                      <p>The second survey, with <span>133 respondents</span> and third survey gave us
+                        insight into our word choice: </p>
                       <ul class="survey">
                           <li><span>54.3%</span> would consider buying hand-dyed shoes</li>
                           <li><span>25.4%</span> would buy hand-dyed shoes</li>
                           <li><span>"used"</span> most resembled "refurbished"</li>
                       </ul>
-                      <p class="survey-results">We had to replace the word "refurbished".
-                      <p>I conducted another survey to test whether it was the term “refurbished” or the concept
-                        behind RF that turned customers away. The word refurbished had to change, so we decided
-                        on hand-painted. This term tested well during the website prototype.</p>
                   </div>
+                  <div class="options">
+                      <div class="first">
+                          <h4>Challenges</h4>
+                          <ul class="survey">
+                              <li>The word "refurbished"</li>
+                              <li>Ambiguity behind the refurbishing process</li>
+                          </ul>
+                      </div>
+                      <div class="second">
+                          <h4>Solutions</h4>
+                              <ul class="survey">
+                                  <li>Replace "refurbished" with "hand-painted"</li>
+                                  <li>Show before / after pictures</li>
+                                  <li>Explain the process </li>
+                              </ul>
+                      </div>
+                  </div>
+                  <p>I conducted another survey to test whether it was the term “refurbished” or the concept
+                    behind RF that turned customers away. The word refurbished had to change, so we decided
+                    on hand-painted. This term tested well during the website prototype.</p>
               </div>
               <div class="users">
                   <h3>Who Are They?</h3>
@@ -119,35 +137,41 @@
               </div>
           </section>
           <section class="info-arch">
-              <h2>information architecture</h2>
-              <h3>Mapping</h3>
-              <p>We conducted a card sort to help organize the website and discover
-                whether additional pages were needed. We learned that the potential
-                customer wanted to learn more about the product, with multiple survey
-                respondents suggesting a section devoted to hand-painting techniques.</p>
-              <img src="images/rfs-site-map.png" class="full">
-              <h3>Flows</h3>
-              <p>Based on our user personas, we decided to target the Vincent’s and
-                Marcus' through Instagram and Facebook, while the Jean's would learn
-                through word-of-mouth. Accordingly, I designed the below user flow to
-                reflect the journey the shopper will take once they click on that link.</p>
-              <img src="images/rfs-user-flows.png" class="full">
+              <div class="mapping">
+                  <h2>information architecture</h2>
+                  <h3>Mapping</h3>
+                  <p>We conducted a card sort to help organize the website and discover
+                    whether additional pages were needed. We learned that the potential
+                    customer wanted to learn more about the product, with multiple survey
+                    respondents suggesting a section devoted to hand-painting techniques.</p>
+                  <img src="images/rfs-site-map.png" class="full">
+              </div>
+              <div class="flows">
+                  <h3>Flows</h3>
+                  <p>Based on our user personas, we decided to target the Vincent’s and
+                    Marcus' through Instagram and Facebook, while the Jean's would learn
+                    through word-of-mouth. Accordingly, I designed the below user flow to
+                    reflect the journey the shopper will take once they click on that link.</p>
+                  <img src="images/rfs-user-flows.png" class="full">
+              </div>
           </section>
           <section class="sketch">
-              <h2>translating to web</h2>
-              <h3>Sketching to Lo-Fi</h3>
-              <img src="images/prototypes.png" class="more-full">
+              <div class="sketching">
+                  <h2>translating to web</h2>
+                  <h3>Sketching to Lo-Fi</h3>
+                  <img src="images/prototypes.png" class="more-full">
               </div>
           </section>
           <section class="branding">
-              <h2>branding</h2>
-              <h3>Logo Formation</h3>
-              <img src="images/logo-formation.png" class="more-full">
-              </div>
-              <h3>Logo Details</h3>
-              <div class="final-logos">
-                  <img src="images/logo-styles.png" class="first">
-                  <img src="images/logo-details.png" class="second">
+              <div class="case-logos">
+                  <h2>branding</h2>
+                  <h3>Logo Formation</h3>
+                  <img src="images/logo-formation.png" class="more-full">
+                  <h3>Logo Details</h3>
+                  <div class="final-logos">
+                      <img src="images/logo-styles.png" class="first">
+                      <img src="images/logo-details.png" class="second">
+                  </div>
               </div>
               <div class="colors">
                   <h3>Colors</h3>
@@ -177,15 +201,16 @@
               </div>
           </section>
           <section class="prototype">
-              <h2>prototype</h2>
-              <!-- insert video -->
+              <div class="prototype-container">
+                  <h2>prototype</h2>
+                  <!-- insert video -->
 
-              <h3>User Feedback</h3>
+                  <h3>User Feedback</h3>
+                  <div class="quotes">
+                      <p class="first">"Nice layout, clean crisp lines. [I] like the color scheme."</p>
+                      <p class="second">“Love the concept. Everyone loves to have originality in their style.”</p>
+                  </div>
                   <div class="user-feedback">
-                      <div class="quotes">
-                          <p class="first">"Nice layout, clean crisp lines. [I] like the color scheme."</p>
-                          <p class="second">“Love the concept. Everyone loves to have originality in their style.”</p>
-                      </div>
                       <p>We conducted multiple rounds of guerilla testing and online user testing
                         through Invision. Overall, we received positive feedback on the shoes and
                         the website. Survey respondents were intrigued by the concept and the
@@ -194,22 +219,27 @@
                         the design. This was alleviated by providing additional information on the
                         dyeing process and on the specific shoes that are being sold.</p>
                   </div>
-              <h3>Landing Page</h3>
-              <img src="images/homepage.png" class="full">
-              <h3>About, Contact, FAQ</h3>
-              <ul class="prototype-images">
-                  <li><img src="images/about-refated.png" class="third"></li>
-                  <li><img src="images/contact-page.png" class="third"></li>
-                  <li><img src="images/FAQ.png" class="third"></li>
-              </ul>
-
-              <h3>Purchasing Flow</h3>
-              <ul class="prototype-images">
-                  <li><img src="images/rfs-detail.png" class="third"></li>
-                  <li><img src="images/rfs-cart.png" class="third"></li>
-                  <li><img src="images/payment.png" class="third"></li>
-                  <li><img src="images/rfs-confirmation.png" class="third"></li>
-              </ul>
+              </div>
+              <div class="landing-container">
+                  <h3>Landing Page</h3>
+                  <img src="images/homepage.png" class="full">
+              </div>
+              <div class="about-container">
+                  <h3>About, Contact, FAQ</h3>
+                  <ul class="prototype-images">
+                      <li><img src="images/about-refated.png" class="third"></li>
+                      <li><img src="images/contact-page.png" class="third"></li>
+                      <li><img src="images/FAQ.png" class="third"></li>
+                  </ul>
+              </div>
+              <div class="purchasing-container">
+                  <h3>Purchasing Flow</h3>
+                  <ul class="prototype-images">
+                      <li><img src="images/rfs-detail.png" class="third"></li>
+                      <li><img src="images/rfs-cart.png" class="third"></li>
+                      <li><img src="images/payment.png" class="third"></li>
+                      <li><img src="images/rfs-confirmation.png" class="third"></li>
+                  </ul>
               <div class="membership">
                   <h3>Membership</h3>
                   <p>Darcy’s goal is to include membership services once he builds a
@@ -220,13 +250,15 @@
           </section>
 
           <section class="conclusion">
-              <h2>what i leared from this experience</h2>
-              <p>In retail, photography is just as important as the site design.
-                To dispel concerns of condition and quality, the users requested
-                more photos of the finished product as well as the painting process.
-              <p>We discovered that customers want to learn about products prior to
-                purchasing them. In the future, we will explore embedding videos on
-                the website and social media platforms.</p>
+              <div class="conclusion-container">
+                  <h2>what i leared from this experience</h2>
+                  <p>In retail, photography is just as important as the site design.
+                    To dispel concerns of condition and quality, the users requested
+                    more photos of the finished product as well as the painting process.
+                  <p>We discovered that customers want to learn about products prior to
+                    purchasing them. In the future, we will explore embedding videos on
+                    the website and social media platforms.</p>
+              </div>
           </section>
           <section class="navigation">
               <div class="arrows">
