--- a/contact.html
+++ b/contact.html
@@ -39,15 +39,15 @@
           </nav>
           <section class="hero">
               <h1>let's chat</h1>
-              <p>I’m available for consulting in UX design, user research, and marketing.
-                You can reach me through <a href="mailto:gokuyan@gmail.com">email</a>
+              <p>I’m available for short-term consulting and coffee chats on anything
+                design related. Send me a note through <a href="mailto:gokuyan@gmail.com">email</a>
                 or <a href="https://www.linkedin.com/in/gulokuyan/">LinkedIn</a>.</p>
-              <ul class="contact-icons">
+              <!--<ul class="contact-icons">
                   <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
                       <i class="fab fa-linkedin-in"></i></a></li>
                   <li><a href="mailto:gokuyan@gmail.com" alt="email me">
                       <i class="fas fa-envelope"></i></a></li>
-              </ul>
+              </ul>-->
           </section>
       </header>
 
