updated about section

--- a/about.html
+++ b/about.html
@@ -46,33 +46,32 @@
       </header>
 
       <section class="about">
-            <h2>you can call me rose or G</h2>
+            <h3>g for short, rose for translation</h3>
             <p>I am a UX designer with 8 years’ experience in
-            strategy and project development. I work full-time at WOCCU, where I
-            am designing and managing our company’s transition to SharePoint, develop
-            content for web and print, and manage & design development finance projects
-            in emerging economies.
-            <p>On the side, I am a freelance UX/UI designer and marketing consultant
+            strategy and project development.
+            <p>Currently, I work as a freelance UX/UI designer and marketing consultant
               to small businesses and start-ups.
-            <p>I found myself in design after watching a TedX Talk by David Butler,
-              Coca-Cola’s first and former global head of design. You can watch it
-              <a href="">here</a>. Then reading his book, which you can find
-              <a href="">here</a>. He applied design principles on business operations
+            <h4>I like to think BIG</h4>
+            <p>I began my journey in design after being inspired by a <a href="https://youtu.be/FmTwrScJ04c">TedX Talk by David Butler</a>,
+              Coca-Cola’s first and former global head of design. And again after reading
+            <a href="https://read.amazon.com/kp/embed?asin=B00LD1S2L4&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_fk8mBb5R29P6H">
+              his book</a> where he explains how he applied design principles on business operations
               to create a new system that made the large company operate as a start-up,
-              always prototyping and innovating, and in the process saveed them over
+              always prototyping and innovating, and in the process saved them over
               $500 million.
               <p>The potential of design - making things practical, usable, and
                 beautiful - excited me.
-              <p>So I started with designing and writing projects in resource-poor
-                countries. Little by little, I’ve increased my skills in design
-                software and Microsoft products. Now I also help small businesses
-                with strategy, marketing, and user experience.
-              <p>I love traveling, getting to know people, and learning new things.
+              <p>So I started with designing projects in resource-poor
+                countries, and little by little, I’ve increased my skills in design
+                software and Microsoft products.
+              <h4>I enjoy discovering new perspectives</h4>
+              <p>I love traveling, meeting people, and learning new things.
                 Most recently, I was in rural Philippines interviewing women
-                entrepreneurs. And my next trip is Milan!</p>
+                entrepreneurs to better understand how financial technology
+                could make their lives easier.</p>
               <div class="buttons">
                   <button>download resume</button>
-                  <button>let's chat</button>
+                  <button>let's get coffee</button>
               </div>
       </section>
 
@@ -89,11 +88,12 @@
                   <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
                     Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
               </div>
+              <p>
           </div>
       </section>
 
       <section class="moodboard">
-            <h2>inspiration for my portfolio</h2>
+            <h2>visual inspiration</h2>
             <img src="images/Moodboard.png">
       </section>
 
